--- a/VC14/Team5_FinalProject.vcxproj
+++ b/VC14/Team5_FinalProject.vcxproj
@@ -43,11 +43,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>$(SolutionDir)\..\Externals\Libs\VC;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)..\Assets</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(SolutionDir)\..\Externals\Libs\VC;$(LibraryPath)</LibraryPath>
-    <OutDir>$(SolutionDir)..\Assets</OutDir>
+    <OutDir>$(SolutionDir)..\Assets\</OutDir>
+    <TargetName>$(ProjectName)</TargetName>
+    <IntDir>$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
