--- a/VC14/Team5_FinalProject.vcxproj
+++ b/VC14/Team5_FinalProject.vcxproj
@@ -87,6 +87,8 @@
     <ClCompile Include="..\Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Assets\bloom.fs.glsl" />
+    <None Include="..\Assets\bloom.vs.glsl" />
     <None Include="..\Assets\depth.fs.glsl" />
     <None Include="..\Assets\depth.vs.glsl" />
     <None Include="..\Assets\fragment.fs.glsl" />
